ts/parse/TscriptParser.java
// Generated from Tscript.g4 by ANTLR 4.5.1
package ts.parse;

  import ts.Location;
  import ts.tree.*;
  import static ts.parse.TreeBuilder.*;
  import java.util.List;
  import java.util.ArrayList;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TscriptParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, STRING_LITERAL=6, BOOLEAN_LITERAL=7, 
		NULL_LITERAL=8, NUMERIC_LITERAL=9, LPAREN=10, RPAREN=11, SEMICOLON=12, 
		EQUAL=13, PLUS=14, ASTERISK=15, MINUS=16, NOT=17, LESSTHAN=18, SLASH=19, 
		GREATERTHAN=20, EQUALTO=21, LBRACE=22, RBRACE=23, PRINT=24, VAR=25, TRUE=26, 
		FALSE=27, NULL=28, WHILE=29, CONTINUE=30, BREAK=31, IF=32, ELSE=33, THROW=34, 
		FINALLY=35, TRY=36, CATCH=37, NEW=38, FUNCTION=39, RETURN=40, THIS=41, 
		IDENTIFIER=42, WhiteSpace=43;
	public static final int
		RULE_program = 0, RULE_statementList = 1, RULE_statement = 2, RULE_emptyStatement = 3, 
		RULE_ifStatement = 4, RULE_breakStatement = 5, RULE_continueStatement = 6, 
		RULE_varStatement = 7, RULE_whileStatement = 8, RULE_blockStatement = 9, 
		RULE_returnStatement = 10, RULE_expressionStatement = 11, RULE_printStatement = 12, 
		RULE_expression = 13, RULE_assignmentExpression = 14, RULE_functionExpression = 15, 
		RULE_memberExpression = 16, RULE_callExpression = 17, RULE_arguments = 18, 
		RULE_argumentList = 19, RULE_formalParameterList = 20, RULE_equalityExpression = 21, 
		RULE_leftHandSideExpression = 22, RULE_newExpression = 23, RULE_relationalExpression = 24, 
		RULE_additiveExpression = 25, RULE_multiplicativeExpression = 26, RULE_unaryExpression = 27, 
		RULE_tryStatement = 28, RULE_objLiteral = 29, RULE_propertyNameAndValueList = 30, 
		RULE_propertyAssignment = 31, RULE_propertyName = 32, RULE_catchStatement = 33, 
		RULE_finallyStatement = 34, RULE_throwStatement = 35, RULE_primaryExpression = 36;
	public static final String[] ruleNames = {
		"program", "statementList", "statement", "emptyStatement", "ifStatement", 
		"breakStatement", "continueStatement", "varStatement", "whileStatement", 
		"blockStatement", "returnStatement", "expressionStatement", "printStatement", 
		"expression", "assignmentExpression", "functionExpression", "memberExpression", 
		"callExpression", "arguments", "argumentList", "formalParameterList", 
		"equalityExpression", "leftHandSideExpression", "newExpression", "relationalExpression", 
		"additiveExpression", "multiplicativeExpression", "unaryExpression", "tryStatement", 
		"objLiteral", "propertyNameAndValueList", "propertyAssignment", "propertyName", 
		"catchStatement", "finallyStatement", "throwStatement", "primaryExpression"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'['", "']'", "'.'", "','", "':'", null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, "'console.log'", "'var'", "'true'", "'false'", "'null'", "'while'", 
		"'continue'", "'break'", "'if'", "'else'", "'throw'", "'finally'", "'try'", 
		"'catch'", "'new'", "'function'", "'return'", "'this'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, "STRING_LITERAL", "BOOLEAN_LITERAL", 
		"NULL_LITERAL", "NUMERIC_LITERAL", "LPAREN", "RPAREN", "SEMICOLON", "EQUAL", 
		"PLUS", "ASTERISK", "MINUS", "NOT", "LESSTHAN", "SLASH", "GREATERTHAN", 
		"EQUALTO", "LBRACE", "RBRACE", "PRINT", "VAR", "TRUE", "FALSE", "NULL", 
		"WHILE", "CONTINUE", "BREAK", "IF", "ELSE", "THROW", "FINALLY", "TRY", 
		"CATCH", "NEW", "FUNCTION", "RETURN", "THIS", "IDENTIFIER", "WhiteSpace"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Tscript.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	  // grab location info (filename/line/column) from token
	  // in order to stick into AST nodes for later error reporting
	  public Location loc(final Token token)
	  {
	    return new Location(getSourceName(), token.getLine(),
	      token.getCharPositionInLine());
	  }

	  // root of AST is stored here
	  // set by the action for the start symbol
	  private Program semanticValue;
	  public Program getSemanticValue()
	  {
	    return semanticValue;
	  }

	public TscriptParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public StatementListContext sl;
		public TerminalNode EOF() { return getToken(TscriptParser.EOF, 0); }
		public StatementListContext statementList() {
			return getRuleContext(StatementListContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			((ProgramContext)_localctx).sl = statementList(0);
			setState(75);
			match(EOF);
			 semanticValue = buildProgram(loc(_localctx.start), ((ProgramContext)_localctx).sl.lval); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementListContext extends ParserRuleContext {
		public List<Statement> lval;
		public StatementListContext sl;
		public StatementContext s;
		public StatementListContext statementList() {
			return getRuleContext(StatementListContext.class,0);
		}
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public StatementListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statementList; }
	}

	public final StatementListContext statementList() throws RecognitionException {
		return statementList(0);
	}

	private StatementListContext statementList(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		StatementListContext _localctx = new StatementListContext(_ctx, _parentState);
		StatementListContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_statementList, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			 ((StatementListContext)_localctx).lval =  new ArrayList<Statement>(); 
			}
			_ctx.stop = _input.LT(-1);
			setState(87);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new StatementListContext(_parentctx, _parentState);
					_localctx.sl = _prevctx;
					_localctx.sl = _prevctx;
					pushNewRecursionContext(_localctx, _startState, RULE_statementList);
					setState(81);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(82);
					((StatementListContext)_localctx).s = statement();
					 ((StatementListContext)_localctx).sl.lval.add(((StatementListContext)_localctx).s.lval);
					                ((StatementListContext)_localctx).lval =  ((StatementListContext)_localctx).sl.lval; 
					}
					} 
				}
				setState(89);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public Statement lval;
		public VarStatementContext v;
		public ExpressionStatementContext e;
		public PrintStatementContext p;
		public EmptyStatementContext es;
		public BlockStatementContext bs;
		public WhileStatementContext ws;
		public BreakStatementContext b;
		public ContinueStatementContext c;
		public IfStatementContext i;
		public ThrowStatementContext th;
		public TryStatementContext tr;
		public ReturnStatementContext re;
		public VarStatementContext varStatement() {
			return getRuleContext(VarStatementContext.class,0);
		}
		public ExpressionStatementContext expressionStatement() {
			return getRuleContext(ExpressionStatementContext.class,0);
		}
		public PrintStatementContext printStatement() {
			return getRuleContext(PrintStatementContext.class,0);
		}
		public EmptyStatementContext emptyStatement() {
			return getRuleContext(EmptyStatementContext.class,0);
		}
		public BlockStatementContext blockStatement() {
			return getRuleContext(BlockStatementContext.class,0);
		}
		public WhileStatementContext whileStatement() {
			return getRuleContext(WhileStatementContext.class,0);
		}
		public BreakStatementContext breakStatement() {
			return getRuleContext(BreakStatementContext.class,0);
		}
		public ContinueStatementContext continueStatement() {
			return getRuleContext(ContinueStatementContext.class,0);
		}
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public ThrowStatementContext throwStatement() {
			return getRuleContext(ThrowStatementContext.class,0);
		}
		public TryStatementContext tryStatement() {
			return getRuleContext(TryStatementContext.class,0);
		}
		public ReturnStatementContext returnStatement() {
			return getRuleContext(ReturnStatementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		try {
			setState(126);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(90);
				((StatementContext)_localctx).v = varStatement();
				 ((StatementContext)_localctx).lval =  ((StatementContext)_localctx).v.lval; 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(93);
				((StatementContext)_localctx).e = expressionStatement();
				 ((StatementContext)_localctx).lval =  ((StatementContext)_localctx).e.lval; 
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(96);
				((StatementContext)_localctx).p = printStatement();
				 ((StatementContext)_localctx).lval =  ((StatementContext)_localctx).p.lval; 
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(99);
				((StatementContext)_localctx).es = emptyStatement();
				 ((StatementContext)_localctx).lval =  ((StatementContext)_localctx).es.lval; 
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(102);
				((StatementContext)_localctx).bs = blockStatement();
				 ((StatementContext)_localctx).lval =  ((StatementContext)_localctx).bs.lval; 
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(105);
				((StatementContext)_localctx).ws = whileStatement();
				 ((StatementContext)_localctx).lval =  ((StatementContext)_localctx).ws.lval; 
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(108);
				((StatementContext)_localctx).b = breakStatement();
				 ((StatementContext)_localctx).lval =  ((StatementContext)_localctx).b.lval; 
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(111);
				((StatementContext)_localctx).c = continueStatement();
				 ((StatementContext)_localctx).lval =  ((StatementContext)_localctx).c.lval; 
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(114);
				((StatementContext)_localctx).i = ifStatement();
				 ((StatementContext)_localctx).lval =  ((StatementContext)_localctx).i.lval; 
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(117);
				((StatementContext)_localctx).th = throwStatement();
				 ((StatementContext)_localctx).lval =  ((StatementContext)_localctx).th.lval; 
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(120);
				((StatementContext)_localctx).tr = tryStatement();
				 ((StatementContext)_localctx).lval =  ((StatementContext)_localctx).tr.lval; 
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(123);
				((StatementContext)_localctx).re = returnStatement();
				 ((StatementContext)_localctx).lval =  ((StatementContext)_localctx).re.lval;
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EmptyStatementContext extends ParserRuleContext {
		public Statement lval;
		public TerminalNode SEMICOLON() { return getToken(TscriptParser.SEMICOLON, 0); }
		public EmptyStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_emptyStatement; }
	}

	public final EmptyStatementContext emptyStatement() throws RecognitionException {
		EmptyStatementContext _localctx = new EmptyStatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_emptyStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			match(SEMICOLON);
			 ((EmptyStatementContext)_localctx).lval =  buildEmptyStatement(loc(_localctx.start)); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfStatementContext extends ParserRuleContext {
		public Statement lval;
		public ExpressionContext e;
		public StatementContext s;
		public StatementContext s1;
		public TerminalNode IF() { return getToken(TscriptParser.IF, 0); }
		public TerminalNode LPAREN() { return getToken(TscriptParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(TscriptParser.RPAREN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public TerminalNode ELSE() { return getToken(TscriptParser.ELSE, 0); }
		public IfStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifStatement; }
	}
